[FIX] hide loading spinner template alignment, hide loading Hits...

--- a/public/styles/blast-visualization.css
+++ b/public/styles/blast-visualization.css
@@ -534,7 +534,7 @@ table.dataTable.no-footer{
 }
 
 #templateAlignmentModal, #structureModal {
-    width: 50%;
+    width:  60em;
     max-width: 60em;
     background-color: #eee;
     overflow-y: initial;
